<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                                   xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             tools:context=".fragments.RideRecieptFragment"
             android:background="@android:color/white"
>

    <include
            layout="@layout/toolbar_app"
            android:id="@+id/toolbar_ride_reciept"
    />
    <TextView
            android:text="@string/ride_reciept_fragment_text_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView3" android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/toolbar_ride_reciept"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="12dp"
            android:textColor="@android:color/black" android:textStyle="bold" android:fontFamily="@font/segoe_ui"/>
    <TextView
            android:text="@string/ride_reciept_fragment_text_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView4" android:layout_marginTop="20dp"
            app:layout_constraintTop_toBottomOf="@+id/textView3" app:layout_constraintStart_toStartOf="@+id/textView3"
            android:fontFamily="@font/segoe_ui" android:textStyle="bold"
            android:textColor="@android:color/black"/>
    <TextView
            android:text="@string/ride_reciept_fragment_text_3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView5" app:layout_constraintStart_toStartOf="@+id/textView4"
            android:layout_marginTop="20dp"
            app:layout_constraintTop_toBottomOf="@+id/textView4" android:textColor="@android:color/black"
            android:textStyle="bold" android:fontFamily="@font/segoe_ui"/>
    <TextView
            android:text="@string/ride_reciept_fragment_text_4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView6" app:layout_constraintStart_toStartOf="@+id/textView5"
            android:layout_marginTop="20dp"
            app:layout_constraintTop_toBottomOf="@+id/textView5" android:textColor="@android:color/black"
            android:textStyle="bold" android:fontFamily="@font/segoe_ui"/>
    <TextView
            android:text="@string/ride_reciept_fragment_text_5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView7" app:layout_constraintStart_toStartOf="@+id/textView6"
            android:layout_marginTop="20dp"
            app:layout_constraintTop_toBottomOf="@+id/textView6" android:textColor="@android:color/black"
            android:textStyle="bold" android:fontFamily="@font/segoe_ui"/>
    <TextView
            android:text="shoaib"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/customer_name_tv"
            app:layout_constraintTop_toTopOf="@+id/textView3" app:layout_constraintBottom_toBottomOf="@+id/textView3"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="12dp"
            android:textColor="@android:color/black" android:fontFamily="@font/segoe_ui"/>
    <TextView
            android:text="Centosquare"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/pickup_loc_tv" app:layout_constraintEnd_toEndOf="@+id/customer_name_tv"
            app:layout_constraintTop_toTopOf="@+id/textView4" app:layout_constraintBottom_toBottomOf="@+id/textView4"
            android:textColor="@android:color/black" android:fontFamily="@font/segoe_ui" android:maxEms="14"/>
    <TextView
            android:text="Shalimar Garden"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/dropoff_loc_tv" app:layout_constraintEnd_toEndOf="@+id/pickup_loc_tv"
            app:layout_constraintTop_toTopOf="@+id/textView5" app:layout_constraintBottom_toBottomOf="@+id/textView5"
            android:textColor="@android:color/black" android:fontFamily="@font/segoe_ui" android:maxEms="15"/>
    <TextView
            android:text="KZ-480"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView11"
            app:layout_constraintTop_toTopOf="@+id/textView6" app:layout_constraintBottom_toBottomOf="@+id/textView6"
            app:layout_constraintEnd_toEndOf="@+id/dropoff_loc_tv"
            android:textColor="@android:color/black" android:fontFamily="@font/segoe_ui" android:maxEms="10"/>
    <TextView
            android:text="Rs : 120/-"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/ride_fare_tv" app:layout_constraintEnd_toEndOf="@+id/textView11"
            app:layout_constraintTop_toTopOf="@+id/textView7" app:layout_constraintBottom_toBottomOf="@+id/textView7"
            android:textColor="@android:color/black" android:fontFamily="@font/segoe_ui"/>
    <Button
            android:text="@string/ride_reciept_fragment_text_6"
            android:layout_width="0dp"
            android:layout_height="37dp"
            android:id="@+id/fare_collected_btn" android:layout_marginTop="50dp"
            app:layout_constraintTop_toBottomOf="@+id/textView7" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" android:background="@android:color/black"
            android:textColor="@android:color/white" android:layout_marginStart="24dp" android:layout_marginEnd="24dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>