<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                                   xmlns:tools="http://schemas.android.com/tools"
                                                   android:layout_width="match_parent"
                                                   android:layout_height="match_parent"
                                                   xmlns:app="http://schemas.android.com/apk/res-auto"
                                                   tools:context=".fragments.AccepRideFragment">

    <fragment
            android:id="@+id/map"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:name="com.google.android.gms.maps.SupportMapFragment"
    />
    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="0dp"
            android:layout_height="108dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:background="@android:color/white"
            app:layout_constraintHorizontal_bias="0.0">


        <Button
                android:text="@string/accept_ride_fragment_text_2"
                android:layout_width="0dp"
                android:layout_height="36dp"
                android:id="@+id/button3" app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintHorizontal_bias="0.5" app:layout_constraintEnd_toStartOf="@+id/button2"
                app:layout_constraintTop_toBottomOf="@+id/cardView"
                app:layout_constraintHorizontal_chainStyle="packed"
                app:layout_constraintBottom_toBottomOf="parent" android:background="@color/light_gray"
                android:layout_marginStart="12dp" android:layout_marginEnd="8dp"/>
        <androidx.cardview.widget.CardView
                android:layout_width="0dp"
                android:layout_height="37dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:elevation="2dp"
                android:id="@+id/cardView">

            <TextView
                    android:text="@string/accept_ride_fragment_text_1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/textView2"
                    android:gravity="center"
                    android:layout_gravity="center"
                    android:textColor="@android:color/black"
                    android:fontFamily="@font/segoe_ui"/>

        </androidx.cardview.widget.CardView>
        <Button
                android:text="@string/accept_ride_fragment_text_3"
                android:layout_width="0dp"
                android:layout_height="36dp"
                android:id="@+id/button2"
                app:layout_constraintStart_toEndOf="@+id/button3" app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/button3" android:background="@android:color/black"
                android:textColor="@android:color/white" android:layout_marginEnd="12dp"/>


    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>