<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".activities.LoginActivity"
        android:background="@drawable/login_background"

>

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:id="@+id/tv_login_heading"
            android:layout_marginTop="57dp"
            android:text="@string/login_activity_text_1"
            android:textSize="37sp"
            android:textColor="@android:color/black"
            android:textStyle="normal"
            android:fontFamily="@font/segoe_ui"/>


    <ImageView android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:src="@drawable/ic_username"
               app:layout_constraintStart_toStartOf="parent"
               android:layout_marginStart="24dp"
               android:id="@+id/imgv_phone_login"

               android:layout_marginTop="12dp" app:layout_constraintTop_toBottomOf="@+id/textView"/>


    <EditText
            android:id="@+id/editText_phon_no_login"
            android:layout_width="0dp"
              android:layout_height="wrap_content"
              app:layout_constraintStart_toEndOf="@id/imgv_phone_login"
              app:layout_constraintEnd_toEndOf="parent"
              android:layout_marginEnd="26.6dp"
              android:inputType="text"
              app:layout_constraintTop_toTopOf="@+id/imgv_phone_login"
              app:layout_constraintHorizontal_bias="0.0"/>



    <TextView
            android:text="@string/login_activity_text_3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/password_tv"
            android:layout_marginTop="43dp"
            app:layout_constraintTop_toBottomOf="@+id/editText_phon_no_login"
            app:layout_constraintStart_toStartOf="@+id/tv_login_heading"
            app:layout_constraintEnd_toEndOf="@+id/tv_login_heading"
            android:textSize="19sp"
            android:textColor="@android:color/black"
            android:fontFamily="@font/segoe_ui"/>




    <ImageView android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:src="@drawable/ic_password"
               app:layout_constraintStart_toStartOf="parent"
               android:layout_marginStart="24dp"
               android:id="@+id/imgv_user_name"
               android:layout_marginTop="12dp"
               app:layout_constraintTop_toBottomOf="@+id/password_tv"/>


    <EditText
            android:id="@+id/user_password_et"
            android:layout_width="0dp"
              android:layout_height="wrap_content"
              app:layout_constraintStart_toEndOf="@id/imgv_user_name"
              app:layout_constraintEnd_toEndOf="parent"
              android:layout_marginEnd="26.6dp"
              android:inputType="number"
              app:layout_constraintTop_toTopOf="@+id/imgv_user_name"
              android:maxLength="11"


              app:layout_constraintHorizontal_bias="0.0"/>









    <Button android:layout_width="256.05dp"
            android:layout_height="39.24dp"
            app:layout_constraintTop_toBottomOf="@+id/user_password_et"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp"
            android:layout_marginTop="52dp"
            android:text="Login"
            android:background="@drawable/ic_button_login"
            android:textSize="19sp"
            android:id="@+id/btn_login"



    />
    <TextView
            android:text="@string/login_activity_text_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView" android:layout_marginTop="43dp"
            app:layout_constraintTop_toBottomOf="@+id/tv_login_heading"
            app:layout_constraintStart_toStartOf="@+id/tv_login_heading"
            app:layout_constraintEnd_toEndOf="@+id/tv_login_heading"
            android:textSize="19sp"
            android:textColor="@android:color/black"
            android:fontFamily="@font/segoe_ui"/>


</androidx.constraintlayout.widget.ConstraintLayout>